1. Rest UI layers. 2. Almost complete this UI project. 3. Some details should be solved in the future.